# ElementZero

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  WineBDLauncher.sln  deps.lua  eatpdb.yaml  ez.d.ts  rules.lua  vcpkg.txt  xmake.lua
.github/: FUNDING.yml
.github/workflows/: ci.yml  newci  newci.yml
Base/: Base.vcxproj  CMakeLists.txt  compat.cpp  cpp.hint  dllmain.cpp  loader.cpp  loader.h  log.cpp  pch.cpp  pch.h  playerdatabase.cpp  scheduler.cpp  settings.hpp  version.cpp  xmake.lua
BasicAntiCheat/: dllmain.cpp
BuiltinMods/: CMakeLists.txt  README.md  xmake.lua
BuiltinMods/AlternativeStorage/: CMakeLists.txt  dllmain.cpp
BuiltinMods/Audit/: CMakeLists.txt  README.md  commands.cpp  database.cpp  dllmain.cpp  serialization.cpp  serialization.h  settings.h  xmake.lua
BuiltinMods/Audit/include/mods/: Audit.h
BuiltinMods/BasicAntiCheat/: CMakeLists.txt  dllmain.cpp
BuiltinMods/BasicAntiCheat/include/mods/: BasicAntiCheat.h
BuiltinMods/Blacklist/: CMakeLists.txt  README.md  api.cpp  commands.cpp  dllmain.cpp  global.h  settings.h
BuiltinMods/Blacklist/include/mods/: Blacklist.h
BuiltinMods/BossBarSupport/: CMakeLists.txt  README.md  bossbar.cpp  dllmain.cpp  global.h  script.cpp
BuiltinMods/BossBarSupport/include/mods/: BossBarSupport.h
BuiltinMods/Bus/: CMakeLists.txt  README.md  chat.cpp  command.cpp  dllmain.cpp  global.h  playerdb.cpp
BuiltinMods/Bus/include/mods/Bus/: api.h
BuiltinMods/ChatAPI/: CMakeLists.txt  dllmain.cpp
BuiltinMods/ChatAPI/include/mods/: ChatAPI.h
BuiltinMods/CommandSupport/: CMakeLists.txt  dllmain.cpp  xmake.lua
BuiltinMods/CommandSupport/include/mods/: CommandSupport.h
BuiltinMods/CoreProtect/: CMakeLists.txt  command.cpp  dllmain.cpp  settings.h
BuiltinMods/CrashHandler/: CMakeLists.txt  dllmain.cpp
BuiltinMods/CustomScoreboard/: CMakeLists.txt  dllmain.cpp
BuiltinMods/DebugTool/: CMakeLists.txt  dllmain.cpp
BuiltinMods/DynamicMotd/: CMakeLists.txt  dllmain.cpp
BuiltinMods/Economy/: CMakeLists.txt  api.cpp  command.cpp  database.cpp  dllmain.cpp  global.h  xmake.lua
BuiltinMods/Essentials/: CMakeLists.txt  README.md  addition_options.cpp  custom_name.cpp  database.cpp  dllmain.cpp  global.h  home.cpp  pch.h  script_loader.cpp  teleport.cpp  transfer_command.cpp  warp.cpp  xmake.lua
BuiltinMods/Essentials/include/mods/: Essentials.h
BuiltinMods/Experimental/: CMakeLists.txt  dllmain.cpp  global.h  hook.cpp
BuiltinMods/FlatWorld/: CMakeLists.txt  dllmain.cpp
BuiltinMods/FormUI/: CMakeLists.txt  dllmain.cpp  script.cpp
BuiltinMods/FormUI/include/mods/: FormUI.h
BuiltinMods/NetworkStatus/: CMakeLists.txt  dllmain.cpp
BuiltinMods/NoEncryption/: CMakeLists.txt  dllmain.cpp
BuiltinMods/NullPlayerData/: CMakeLists.txt  dllmain.cpp
BuiltinMods/PacketDumper/: CMakeLists.txt  database.cpp  dllmain.cpp  global.h
BuiltinMods/RPC/: CMakeLists.txt  dllmain.cpp
BuiltinMods/Remote/: CMakeLists.txt  blacklist.cpp  chat.cpp  command.cpp  dllmain.cpp  global.h  playerlist.cpp
BuiltinMods/Remote/proto/: .gitignore  blacklist.fbs  blacklist_generated.h  chat.fbs  chat_event.fbs  chat_event_generated.h  chat_generated.h  command.fbs  command_generated.h  gen.sh  player.fbs  player_generated.h  uuid.fbs  uuid_addition.cpp  uuid_addition.h  uuid_generated.h
BuiltinMods/ScriptingSupport/: CMakeLists.txt  apis.cpp  apiset.cpp  apiset.h  chakra_helper.h  dllmain.cpp  global.h  hooks.cpp  json.cpp  lazyapi.h  script_loader.cpp  scriptapi.cpp
BuiltinMods/ScriptingSupport/apiset/: bac.cpp  blacklist.cpp  chatapi.cpp  commandapi.cpp  consoleapi.cpp  economy.cpp  entity.cpp  httprequest.cpp  inventory.cpp  nbt.cpp  playerapi.cpp  sqlite3.cpp  text.cpp  timer.cpp  utils.cpp
BuiltinMods/ScriptingSupport/include/mods/ScriptSupport/: chakra_helper.h  scriptapi.h
BuiltinMods/SignCommand/: CMakeLists.txt  dllmain.cpp
BuiltinMods/SpawnProtection/: CMakeLists.txt  command.cpp  dllmain.cpp  settings.h  xmake.lua
BuiltinMods/WineFix/: CMakeLists.txt  dllmain.cpp
CommandSupport/: CMakeLists.txt  CommandSupport.vcxproj  dllmain.cpp  pch.h
CustomMods/: CMakeLists.txt
DebugTool/: CMakeLists.txt  dllmain.cpp
Essentials/: CMakeLists.txt  Essentials.vcxproj  addition_options.cpp  custom_name.cpp  dllmain.cpp  global.h  pch.h  teleport.cpp  transfer_command.cpp
Lib/: ChakraCore.def  ChakraCore.lib  c4core.lib  funchook_dll.lib  ryml.lib  yaml-cpp.lib
Lib/c4/: allocator.hpp  base64.hpp  bitmask.hpp  blob.hpp  c4_push.hpp  charconv.hpp  compiler.hpp  error.hpp  format.hpp  hash.hpp  language.hpp  memory_resource.hpp  memory_util.hpp  span.hpp  substr.hpp  type_name.hpp
MinecraftHeaders/Actor/: Actor.h  ActorDamageSource.h  ActorDefinitionIdentifier.h  ActorLink.h  ActorRuntimeID.h  ActorType.h  ActorUniqueID.h  AttributeInstanceHandle.h  GameMode.h  Mob.h  Player.h  ServerPlayer.h  SyncedAttribute.h  SynchedActorData.h
MinecraftHeaders/Block/: ActorBlock.h  Block.h  BlockLegacy.h  BlockPalette.h  BlockSource.h  VanillaBlockTypes.h  VanillaBlocks.h
MinecraftHeaders/BlockActor/: BlockActor.h  BlockActorType.h  Sign.h
MinecraftHeaders/Command/: Command.h  CommandContext.h  CommandFlag.h  CommandOrigin.h  CommandOriginData.h  CommandOutput.h  CommandOutputMessage.h  CommandOutputParameter.h  CommandOutputType.h  CommandParameterData.h  CommandPermissionLevel.h  CommandPosition.h  CommandPropertyBag.h  CommandRawText.h  CommandRegistry.h  CommandSelector.h  CommandSelectorBase.h  CommandVersion.h  (+5 more)
ModLoader/: CMakeLists.txt  HealthCheck.cpp  HealthCheck.h  ModLoader.vcxproj  ModLoader.vcxproj.filters  dllmain.cpp  forward.cpp  forward.def  framework.h  hook_impl.cpp  hook_init.h  pch.cpp  pch.h  xmake.lua
NoEncryption/: CMakeLists.txt
Public/: anticheat.h  audit.h  base.h  blacklist.h  bossbar.h  chakra_helper.h  chat.h  comhelper.h  command.h  dllentry.h  economy.h  essentials.h  event.h  hook.h  log.h  modutils.h  playerdb.h  remote.h  scheduler.h  scriptapi.h  sig.h  typestring.h  uuidsupport.h  yaml.h
cmake/: Deps.cmake  EZToolchain.cmake  Utility.cmake
(+176 files in other folders)
